--- a/experiences.html
+++ b/experiences.html
@@ -63,13 +63,13 @@
     <section class="normal1">
         <div class="content">
             <h3 class= "title2">SOMFY</h3>
-            <p class="annee"><strong>2023:</strong> Stage : Ingénieur Software</p>
+            <p class="annee"><strong>2023 :</strong> Stage : Ingénieur Software</p>
             <p class="paragraphe"><em>En tant qu'ingénieur Software lors de mon stage de cinq mois au sein de l'entreprise SOMFY à Cluses, j'ai eu la responsabilité de travailler de manière autonome sur le développement d'un logiciel passerelle. Mon objectif principal était de simplifier l'analyse des retours-moteurs après leur utilisation. J'ai mis en œuvre mes compétences en programmation (Python, C, C++, HTML), afin de trouver les solutions pour créer un logiciel simple d'utilisation et efficace. Cette expérience m'a permis d'approfondir mes connaissances en développement logiciel, d'améliorer mes compétences en organisation et de renforcer ma maîtrise des langages de programmation.</em></p>
             <br>
         </div>
         <div class="content">
             <h3 class= "title2">THALES LAS FRANCE</h3>
-            <p class="annee"><strong>2022:</strong> Stage : Manipulation de base de données</p>
+            <p class="annee"><strong>2022 :</strong> Stage : Manipulation de bases de données</p>
             <p class="paragraphe"><em>
                 En tant que stagiaire chez THALES LAS France pendant deux mois, j'ai eu l'opportunité de travailler à Rungis, en Île-de-France. Mes principales responsabilités ont consisté à saisir des métadonnées liées aux livraisons documentaires dans la base de données de l'entreprise. J'ai également participé activement à l'actualisation du plan de pilotage. Au cours de cette expérience, j'ai pu développer mes compétences en analyse de données, et en compréhension de l'organisation d'un grand groupe. J'ai également eu l'occasion de démontrer mon autonomie dans la réalisation des tâches qui m'ont été confiées. Ce stage m'a permis d'acquérir une expérience précieuse et de renforcer mes compétences professionnelles.</em></p>
             <br>
@@ -79,14 +79,14 @@
     <section class="normal1">
         <div class="content">
             <h3 class= "title2">Gauthier Fils</h3>
-            <p class="annee"><strong>2021:</strong> Stage : Analyse de l'organisation d'une entreprise</p>
-            <p class="paragraphe"><em>Lors de mon stage de cinq semaines chez Gauthier Fils, j'ai pu étudier l'organisation d'une PME en me rendant dans les différents services de l'entreprise. Ce stage m'a permis de développer mes compétences en réflexion, analyse et d'appliquer mes connaissances théoriques sur l'organisation des entreprises. J'ai ainsi acquis une meilleure compréhension du fonctionnement global d'une entreprise.</em></p>
+            <p class="annee"><strong>2021 :</strong> Stage : Analyse de l'organisation d'une entreprise</p>
+            <p class="paragraphe"><em>Lors de mon stage de cinq semaines chez Gauthier Fils, j'ai pu étudier l'organisation d'une PME en me rendant dans les différents services de l'entreprise. Ce stage m'a permis de développer mes compétences en réflexion, analyse et d'appliquer mes connaissances théoriques sur l'organisation des entreprises.</em></p>
             <br>
         </div>
         <div class="content">
             <h3 class= "title2">Trésorerie Publique</h3>
-            <p class="annee"><strong> 2020:</strong> Emploi estival : Archivage de documents confidentiels</p>
-            <p class="paragraphe"><em>Lors de mon job d'été d'un mois à la Trésorerie Publique d'Ambert, j'ai trié et organisé des documents au sein des archives. Cette expérience m'a permis de développer des compétences en gestion méticuleuse et en organisation. J'ai démontré ma capacité à travailler de manière autonome et à être responsable dans l'exécution des tâches qui m'ont été confiées. Ce poste a renforcé ma rigueur et mon sens de l'organisation. </em></p>
+            <p class="annee"><strong> 2020 :</strong> Emploi estival : Archivage de documents confidentiels</p>
+            <p class="paragraphe"><em>Lors de mon job d'été d'un mois à la Trésorerie Publique d'Ambert, j'ai trié et organisé des documents au sein des archives. Cette expérience m'a permis de développer des compétences en gestion et en organisation. J'ai démontré ma capacité à travailler de manière autonome et à être responsable dans l'exécution des tâches qui m'ont été confiées. Ce poste a renforcé ma rigueur et mon sens de l'organisation. </em></p>
             <br>
         </div>
 
@@ -94,12 +94,12 @@
     <section class="normal1">
         <div class="content">
             <h3 class= "title2">OMERIN</h3>
-            <p class="annee"><strong>2019:</strong> Emploi estival : Vidange de machines Industriels</p>
+            <p class="annee"><strong>2019 :</strong> Emploi estival : Vidange de machines Industriels</p>
             <p class="paragraphe"><em>Chez Omerin, j'ai occupé un emploi estival au service maintenance où j'ai réalisé des vidanges de machines industrielles, notamment des métiers à tresser. Cette expérience m'a permis de découvrir concrètement le monde du travail et a suscité en moi une réelle motivation à poursuivre de longues études. J'ai développé ma rigueur et ma précision en suivant les procédures de maintenance avec soin. De plus, cette expérience m'a également enseigné l'importance du travail d'équipe.</em></p>
         </div>
         <div class="content">
             <h3 class= "title2">INTERIM</h3>
-            <p class="annee"><strong>2018:</strong> Expérience en agence d'intérim à mes 17 ans</p>
+            <p class="annee"><strong>2018 :</strong> Expérience en agence d'intérim à mes 17 ans</p>
             <p class="paragraphe"><em>À mes 17 ans, j'ai eu une première expérience du monde du travail grâce à mon emploi en agence d'intérim. J'ai travaillé dans différentes usines avec des missions généralement de trois jours. Cette expérience m'a permis de m'adapter rapidement à de nouveaux environnements, de suivre des consignes précises et de collaborer efficacement en équipe. Ces courtes missions m'ont apporté une première immersion dans le monde professionnel, renforçant ma résilience et ma volonté de poursuivre mes études pour développer mes compétences et ouvrir de nouvelles opportunités.</em></p>
         </div>
     </section>
@@ -108,14 +108,14 @@
             <h3 class= "title2">SOMFY</h3>
             <img src="images/6.png" alt="Formation" class="Image2">
 
-            <p class="annee"><strong>2023:</strong> Stage : Ingénieur Software</p>
+            <p class="annee"><strong>2023 :</strong> Stage : Ingénieur Software</p>
             <p class="paragraphe"><em>En tant qu'ingénieur Software lors de mon stage de cinq mois au sein de l'entreprise SOMFY à Cluses, j'ai eu la responsabilité de travailler de manière autonome sur le développement d'un logiciel passerelle. Mon objectif principal était de simplifier l'analyse des retours-moteurs après leur utilisation. J'ai mis en œuvre mes compétences en programmation (Python, C, C++, HTML), afin de trouver les solutions pour créer un logiciel simple d'utilisation et efficace. Cette expérience m'a permis d'approfondir mes connaissances en développement logiciel, d'améliorer mes compétences en organisation et de renforcer ma maîtrise des langages de programmation.</em></p>
             <br>
         </div>
         <div class="content">
             <h3 class= "title2">THALES LAS FRANCE</h3>
             <img src="images/7.png" alt="Formation" class="Image2">
-            <p class="annee"><strong>2022:</strong> Stage : Manipulation de base de données</p>
+            <p class="annee"><strong>2022 :</strong> Stage : Manipulation de bases de données</p>
             <p class="paragraphe"><em>
                 En tant que stagiaire chez THALES LAS France pendant deux mois, j'ai eu l'opportunité de travailler à Rungis, en Île-de-France. Mes principales responsabilités ont consisté à saisir des métadonnées liées aux livraisons documentaires dans la base de données de l'entreprise. J'ai également participé activement à l'actualisation du plan de pilotage. Au cours de cette expérience, j'ai pu développer mes compétences en analyse de données, et en compréhension de l'organisation d'un grand groupe. J'ai également eu l'occasion de démontrer mon autonomie dans la réalisation des tâches qui m'ont été confiées. Ce stage m'a permis d'acquérir une expérience précieuse et de renforcer mes compétences professionnelles.</em></p>
             <br>
@@ -127,16 +127,16 @@
             <h3 class= "title2">Gauthier Fils</h3>
             <img src="images/8.png" alt="Formation" class="Image2">
 
-            <p class="annee"><strong>2021:</strong> Stage : Analyse de l'organisation d'une entreprise</p>
-            <p class="paragraphe"><em>Lors de mon stage de cinq semaines chez Gauthier Fils, j'ai pu étudier l'organisation d'une PME en me rendant dans les différents services de l'entreprise. Ce stage m'a permis de développer mes compétences en réflexion, analyse et d'appliquer mes connaissances théoriques sur l'organisation des entreprises. J'ai ainsi acquis une meilleure compréhension du fonctionnement global d'une entreprise.</em></p>
+            <p class="annee"><strong>2021 :</strong> Stage : Analyse de l'organisation d'une entreprise</p>
+            <p class="paragraphe"><em>Lors de mon stage de cinq semaines chez Gauthier Fils, j'ai pu étudier l'organisation d'une PME en me rendant dans les différents services de l'entreprise. Ce stage m'a permis de développer mes compétences en réflexion, analyse et d'appliquer mes connaissances théoriques sur l'organisation des entreprises.</em></p>
             <br>
         </div>
         <div class="content">
             <h3 class= "title2">Trésorerie Publique</h3>
             <img src="images/9.png" alt="Formation" class="Image2">
 
-            <p class="annee"><strong> 2020:</strong> Emploi estival : Archivage de documents confidentiels</p>
-            <p class="paragraphe"><em>Lors de mon job d'été d'un mois à la Trésorerie Publique d'Ambert, j'ai trié et organisé des documents au sein des archives. Cette expérience m'a permis de développer des compétences en gestion méticuleuse et en organisation. J'ai démontré ma capacité à travailler de manière autonome et à être responsable dans l'exécution des tâches qui m'ont été confiées. Ce poste a renforcé ma rigueur et mon sens de l'organisation. </em></p>
+            <p class="annee"><strong> 2020 :</strong> Emploi estival : Archivage de documents confidentiels</p>
+            <p class="paragraphe"><em>Lors de mon job d'été d'un mois à la Trésorerie Publique d'Ambert, j'ai trié et organisé des documents au sein des archives. Cette expérience m'a permis de développer des compétences en gestion et en organisation. J'ai démontré ma capacité à travailler de manière autonome et à être responsable dans l'exécution des tâches qui m'ont été confiées. Ce poste a renforcé ma rigueur et mon sens de l'organisation. </em></p>
             <br>
         </div>
 
@@ -146,14 +146,14 @@
             <h3 class= "title2">OMERIN</h3>
             <img src="images/10.png" alt="Formation" class="Image2">
 
-            <p class="annee"><strong>2019:</strong> Emploi estival : Vidange de machines Industriels</p>
+            <p class="annee"><strong>2019 :</strong> Emploi estival : Vidange de machines Industriels</p>
             <p class="paragraphe"><em>Chez Omerin, j'ai occupé un emploi estival au service maintenance où j'ai réalisé des vidanges de machines industrielles, notamment des métiers à tresser. Cette expérience m'a permis de découvrir concrètement le monde du travail et a suscité en moi une réelle motivation à poursuivre de longues études. J'ai développé ma rigueur et ma précision en suivant les procédures de maintenance avec soin. De plus, cette expérience m'a également enseigné l'importance du travail d'équipe.</em></p>
         </div>
         <div class="content">
             <h3 class= "title2">INTERIM</h3>
             <img src="images/11.png" alt="Formation" class="Image2">
 
-            <p class="annee"><strong>2018:</strong> Expérience en agence d'intérim à mes 17 ans</p>
+            <p class="annee"><strong>2018 :</strong> Expérience en agence d'intérim à mes 17 ans</p>
              <p class="paragraphe"><em>À mes 17 ans, j'ai eu une première expérience du monde du travail grâce à mon emploi en agence d'intérim. J'ai travaillé dans différentes usines avec des missions généralement de trois jours. Cette expérience m'a permis de m'adapter rapidement à de nouveaux environnements, de suivre des consignes précises et de collaborer efficacement en équipe. Ces courtes missions m'ont apporté une première immersion dans le monde professionnel, renforçant ma résilience et ma volonté de poursuivre mes études pour développer mes compétences et ouvrir de nouvelles opportunités.</em></p>
            <br><br><br>
         </div>
