--- a/projets.html
+++ b/projets.html
@@ -75,13 +75,13 @@
         </div>
         <div class="content">
             <h3 class="title2">REULOCK</h3>
-            <p>En tant que <strong>chef de projet</strong>, j'ai encadré une équipe dans la conception d'une solution de fermeture électronique pour les colis réutilisables de l'entreprise REUTEC. Notre solution est innovante puisqu'avec son alimentation secteur 12V, elle élimine le besoin d'une batterie intégrée dans le colis. L'utilisateur scanne simplement le QR-CODE sur ce dernier pour obtenir son code de déverrouillage, puis il branche le colis sur secteur et entre le code pour ouvrir le colis. Durant ce projet, j'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>management d'équipe</strong> et <strong> gestion du temps</strong>.</p>
+            <p>En tant que <strong>chef de projet</strong>, j'ai encadré une équipe dans la conception d'une solution de fermeture électronique pour les colis réutilisables de l'entreprise REUTEC. Notre solution est innovante puisqu'elle permet, avec son alimentation secteur 12V, d'éliminer le besoin d'une batterie intégrée dans le colis. L'utilisateur scanne simplement le QR-CODE sur ce dernier pour obtenir son code de déverrouillage, puis il branche le colis sur secteur et entre le code pour ouvrir le colis. Durant ce projet, j'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>management d'équipe</strong> et <strong> gestion du temps</strong>.</p>
         </div>
     </section>
     <section class="normal2">
         <h3 class="title2">REULOCK</h3>
         <div class="content">
-            <p>En tant que <strong>chef de projet</strong>, j'ai encadré une équipe dans la conception d'une solution de fermeture électronique pour les colis réutilisables de l'entreprise REUTEC. Notre solution est innovante puisqu'avec son alimentation secteur 12V, elle élimine le besoin d'une batterie intégrée dans le colis. L'utilisateur scanne simplement le QR-CODE sur ce dernier pour obtenir son code de déverrouillage, puis il branche le colis sur secteur et entre le code pour ouvrir le colis. Durant ce projet, j'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>management d'équipe</strong> et <strong> gestion du temps</strong>.</p>
+            <p>En tant que <strong>chef de projet</strong>, j'ai encadré une équipe dans la conception d'une solution de fermeture électronique pour les colis réutilisables de l'entreprise REUTEC. Notre solution est innovante puisqu'elle permet, avec son alimentation secteur 12V, d'éliminer le besoin d'une batterie intégrée dans le colis. L'utilisateur scanne simplement le QR-CODE sur ce dernier pour obtenir son code de déverrouillage, puis il branche le colis sur secteur et entre le code pour ouvrir le colis. Durant ce projet, j'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>management d'équipe</strong> et <strong> gestion du temps</strong>.</p>
         </div>
         <div class="images">
             <img src="./images/reulock.jpg" alt="Projets">
@@ -93,7 +93,7 @@
     <section class="normal">
         <div class="content">
             <h3 class="title2">ARES</h3>
-            <p>J'ai principalement travaillé sur la partie <strong>Intelligence Artificielle</strong> du projet au seins de mon équipe de 7 personnes. Notre objectif était de créer un robot capable de prendre et de déplacer des cubes vers un emplacement spécifique. J'ai été responsable de l'implémentation de l'algorithme A* pour le déplacement du robot. En utilisant cet algorithme, j'ai développé une stratégie efficace pour que le robot, planifie ses mouvements afin d'optimiser la collecte des cubes dans le concours qui avait été organisé en fin d'année. En plus de cela, j'ai également contribué à d'autres aspects du projet tels que <strong>le montage du robot</strong>, <strong> modélisation de certaines pièces</strong>, <strong>la lecture d'images reçues</strong>, et <strong>la communication avec le serveur MQTT</strong>.</p>
+            <p>J'ai principalement travaillé sur la partie <strong>Intelligence Artificielle</strong> du projet au sein d'une équipe de 7 personnes. Notre objectif était de créer un robot capable de prendre et de déplacer des cubes vers un emplacement spécifique. J'ai été responsable de l'implémentation de l'algorithme A* pour le déplacement du robot. L'objectif était d'optimiser les mouvements du robot afin d'être le mieux classé dans le concours qui avait été organisé en fin d'année. En plus de cela, j'ai également contribué à d'autres aspects du projet tels que <strong>le montage du robot</strong>, <strong> la modélisation de certaines pièces</strong>, <strong>la lecture des images reçues</strong>, et <strong>la communication avec le serveur MQTT</strong>.</p>
         </div>
         <div class="images">
             <img src="./images/ares.jpg" alt="Projets">
@@ -136,7 +136,7 @@
                 <img class="smallImg1" src="./images/drone.jpg" alt="Projets">
             </div>
             <div class="content">
-                <br><p>Le projet de télécommande de drone est le fruit du travail acharné de mon équipe de quatre personnes. Nous avons conçu une télécommande innovante qui pilote par radio (NRF24L01) un drone tout en respectant les fréquences réglementaires. L'utilisation d'un écran OLED a permis d'afficher en temps réel des informations cruciales, tandis que les deux joysticks assurent un pilotage fluide de l'altitude et de la direction. Grâce à notre choix judicieux du microcontrôleur (ATmega328P) et à l'intégration d'une centrale inertielle, le drone bénéficie d'une stabilité et d'une précision exemplaires. Ce projet reflète notre passion pour l'innovation technologique et l'ingénierie de pointe.</p>
+                <br><p>Le projet de télécommande de drône est le fruit du travail acharné de mon équipe de quatre personnes. Nous avons conçu une télécommande innovante qui pilote par radio (NRF24L01) un drône tout en respectant les fréquences réglementaires. L'utilisation d'un écran OLED a permis d'afficher en temps réel des informations cruciales, tandis que les deux joysticks assurent un pilotage fluide de l'altitude et de la direction. Grâce à notre choix judicieux du microcontrôleur (ATmega328P) et à l'intégration d'une centrale inertielle, le drône bénéficie d'une stabilité et d'une précision exemplaire.</p>
             </div>
         </div>
         <div  class="glue">
@@ -145,7 +145,7 @@
                 <img class="smallImg1" src=./images/mcu.PNG alt="Projets">
             </div>
             <div class="content">
-                <br><p>Notre projet de microcontrôleur, réalisé suite aux cours théoriques cette matière, consistait à développer un oscilloscope et un multimètre avec la PIC18F4550, en utilisant l'architecture Harvard. Notre équipe de trois personnes a accompli les étapes suivantes : pour le multimètre, nous avons initialisé le CAN, mis en place des fonctions d'interruption ADC, réalisé la conversion en millivolts, affiché les résultats sur un affichage 7 segments et mesuré les fréquences. Quant à l'oscilloscope, nous avons réussi à implémenter le mode de déclenchement et de fonctionnement à l'aide d'une interruption par bouton.</p>
+                <br><p>Notre projet de microcontrôleur, réalisé suite aux cours théoriques de cette matière, consistait à développer un oscilloscope et un multimètre avec la PIC18F4550 en utilisant l'architecture Harvard. Notre équipe de trois personnes a accompli les étapes suivantes : pour le multimètre, nous avons initialisé le CAN, mis en place des fonctions d'interruption ADC, réalisé la conversion en millivolts, affiché les résultats sur un afficheur 7 segments et mesuré les fréquences. Quant à l'oscilloscope, nous avons réussi à implémenter le mode de déclenchement et celui de fonctionnement à l'aide d'une interruption par bouton.</p>
             </div>
         </div>
     </section>
@@ -159,7 +159,7 @@
                 <img class="smallImg" src="./images/alexa.jpg" alt="Projets">
             </div>
             <div class="content">
-                <p>Le projet ALEXA portait sur le traitement du signal numérique pour la reconnaissance vocale. Mon équipe et moi avons numérisé le signal phonatoire et extrait les caractéristiques de la voix à l'aide de la technique MFCC. Le modèle GMM a été utilisé pour la reconnaissance du locuteur en modélisant ses caractéristiques vocales. Ce projet m'a a offert une expérience enrichissante dans le domaine du traitement vocal avancé et du développement de compétences en ingénierie et programmation.</p>
+                <p>Le projet ALEXA portait sur le traitement du signal numérique pour la reconnaissance vocale. Mon équipe et moi avons numérisé le signal phonatoire et extrait les caractéristiques de la voix à l'aide de la technique MFCC. Le modèle GMM a été utilisé pour la reconnaissance du locuteur en modélisant ses caractéristiques vocales. Ce projet m'a offert une expérience enrichissante dans le domaine du traitement vocal avancé.</p>
             </div>
         </div>
         <div  class="glue">
@@ -177,7 +177,7 @@
                 <img class="smallImg" src="./images/campusConnecte.PNG" alt="Projets">
             </div>
             <div class="content">
-                <p>Le projet "Impulse" a duré un semestre et a été une aventure enrichissante en groupe de six étudiants. Nous avons choisi de repenser le campus de demain suite à la pandémie. Notre idée était un tableau connecté aux salles de cours et caméras, permettant un apprentissage flexible et individuel. Cette approche répondait aux besoins actuels de l'apprentissage à distance. Le projet nous a permis de développer des compétences en collaboration, recherche et conception de solutions novatrices. Nous sommes fiers d'avoir contribué à façonner l'avenir de l'éducation avec notre idée du campus connecté.</p>
+                <p>Le projet "Impulse" a duré un semestre et a été une aventure enrichissante en groupe de six étudiants. Nous avons choisi de repenser le campus de demain suite à la pandémie. Notre idée était un tableau connecté aux salles de cours et des caméras, permettant un apprentissage flexible et individuel. Cette approche répondait aux besoins actuels de l'apprentissage à distance. Le projet nous a permis de développer des compétences en collaboration, recherche et conception de solutions novatrices.</p>
             </div>
         </div>
     </section>
@@ -186,7 +186,7 @@
     <h2>Deuxième année à l'ECE</h2>
     <section class="section2">
         <div class="glue">
-            <h3>Station de ski : Projets IA et Algorythmes de parcours</h3>
+            <h3>Station de ski : Projets IA et algorithmes de parcours</h3>
             <div class="images">
                 <img class="smallImg" src="./images/stationSki.png" alt="Projets">
             </div>
@@ -210,7 +210,7 @@
     <h2>Première année à l'ECE</h2>
     <section class="section2">
         <div class="glue">
-            <h3>Le Synthétiseur : premier projet d'electronique</h3>
+            <h3>Le Synthétiseur : premier projet d'électronique</h3>
             <div class="images">
                 <img class="smallImg" src="./images/projetElec1.jpg" alt="Projets">
             </div>
@@ -219,12 +219,12 @@
             </div>
         </div>
         <div  class="glue">
-            <h3>QWIRKLE : Initiation au C et aux algorythmes</h3>
+            <h3>QWIRKLE : Initiation au C et aux algorithmes</h3>
             <div class="images">
                 <img class="smallImg" src=./images/qwirkle.png alt="Projets">
             </div>
             <div class="content">
-                <p>Mon premier programme en C a été une expérience passionnante où j'ai implémenté en équipe de 3 le jeu de société Qwirkle en console. Nous avons crée une version interactive et fonctionnelle du jeu. Les joueurs pouvaient placer des tuiles avec différentes formes et couleurs pour avoir des combinaisons gagnantes. Ce projet m'a permis d'acquérir des compétences en programmation et de me familiariser avec les concepts du langage C.</p>
+                <p>Mon premier programme en C a été une expérience passionnante où j'ai implémenté en équipe de 3 le jeu de société Qwirkle en console. Nous avons créé une version interactive et fonctionnelle du jeu. Les joueurs pouvaient placer des tuiles avec différentes formes et couleurs pour avoir des combinaisons gagnantes. Ce projet m'a permis d'acquérir des compétences en programmation et de me familiariser avec les concepts du langage C.</p>
             </div>
         </div>
         <div  class="glue">
