--- a/experiences.html
+++ b/experiences.html
@@ -28,7 +28,7 @@
             <div class="icon-bar"></div>
         </div>
         <ul id="menu" class="navbar-links">
-            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
+            <li><a href="pageAccueil.html">ACCUEIL</a></li>
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
             <li><a href="projets.html">PROJETS</a></li>
@@ -43,12 +43,12 @@
 </header>
 <header class="b">
     <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <a href="pageAccueil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
         <small>ADRIEN RAVEL</small>
     </div>
     <nav class="navbar">
         <ul >
-            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
+            <li><a href="pageAccueil.html">ACCUEIL</a></li>
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
             <li><a href="projets.html">PROJETS</a></li>
