--- a/experiencesEnglish.html
+++ b/experiencesEnglish.html
@@ -41,7 +41,7 @@
 </header>
 <header class="b">
     <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <a href="pageAccueil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
         <small>ADRIEN RAVEL</small>
     </div>
     <nav class="navbar">
