--- a/skillsEnglish.html
+++ b/skillsEnglish.html
@@ -18,22 +18,42 @@
     </script>
 </head>
 <body>
-
-<header >
-  <div class="left-section">
-    <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
-    <small>ADRIEN RAVEL</small>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="indexEnglish.html">HOME</a></li>
-      <li><a href="formationEnglish.html">EDUCATION</a></li>
-      <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
-      <li><a href="projectEnglish.html">PROJECTS</a></li>
-      <li><a href="skillsEnglish.html">SKILLS</a></li>
-    </ul>
-  </nav>
-  <a class="drapeau" href="skills.html" ><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+<header class="a">
+    <nav class="navbar">
+        <div class="navbar-toggle" onclick="toggleMenu()">
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+        </div>
+        <ul id="menu" class="navbar-links">
+            <li><a href="indexEnglish.html">HOME</a></li>
+            <li><a href="formationEnglish.html">EDUCATION</a></li>
+            <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+            <li><a href="projectEnglish.html">PROJECTS</a></li>
+            <li><a href="skillsEnglish.html">SKILLS</a></li>
+        </ul>
+    </nav>
+    <div class="left-section">
+        <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <a class="drapeau" href="skills.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+</header>
+<header class="b">
+    <div class="left-section">
+        <a href="pageAccueil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <nav class="navbar">
+        <ul >
+            <li><a href="indexEnglish.html">HOME</a></li>
+            <li><a href="formationEnglish.html">EDUCATION</a></li>
+            <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+            <li><a href="projectEnglish.html">PROJECTS</a></li>
+            <li><a href="skillsEnglish.html">SKILLS</a></li>
+        </ul>
+    </nav>
+    <a class="drapeau" href="skills.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
 
 
