--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -38,11 +38,11 @@
         <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
         <small>ADRIEN RAVEL</small>
     </div>
-    <a class="drapeau" href="pageAcceuil.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+    <a class="drapeau" href="pageAccueil.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
 <header class="b">
     <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <a href="pageAccueil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
         <small>ADRIEN RAVEL</small>
     </div>
     <nav class="navbar">
@@ -54,7 +54,7 @@
             <li><a href="skillsEnglish.html">SKILLS</a></li>
         </ul>
     </nav>
-    <a class="drapeau" href="pageAcceuil.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+    <a class="drapeau" href="pageAccueil.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
 
 <main>
