--- a/skillsEnglish.html
+++ b/skillsEnglish.html
@@ -178,17 +178,7 @@
                 </svg>
                 <div class="nb2">70%</div>
             </div>
-            <p class="titreJauge">C</p>
-        </div>
-
-        <div class="TittreJauge">
-            <div class="pie" >
-                <svg>
-                    <circle class="circle2" id="g" r="30%" cx="50%" cy="50%"></circle>
-                </svg>
-                <div class="nb2">65%</div>
-            </div>
-            <p class="titreJauge">C++</p>
+            <p class="titreJauge">C/C++</p>
         </div>
 
         <div class="TittreJauge">
